--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/values/strings.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/values/strings.xml
@@ -1,17 +1,61 @@
 <resources>
-    <string name="app_name">Watching_Extremely_Awesome_Robots</string>
+    <string name="app_name">WEARs</string>
 
-    <string-array name="test_array">
-        <item>option1</item>
-        <item>option2</item>
-        <item>option3</item>
-        <item>option4</item>
-        <item>option5</item>
-        <item>option6</item>
-        <item>option7</item>
-        <item>option8</item>
+    <string name="matchDataPreferences">matchData</string>
+    <string name="stillPreferences">stillEnabled</string>
+
+    <string-array name="Scouter">
+        <item>Adelia Rumpel</item>
+        <item>AJ Magesto</item>
+        <item>Alayna Sikac</item>
+        <item>Alex Beschta</item>
+        <item>Alex Jensen</item>
+        <item>Allison Willhite</item>
+        <item>Andrew Ocampo</item>
+        <item>Anna Andler</item>
+        <item>Audrey Mayer</item>
+        <item>Devin Milligan</item>
+        <item>Dominic Falasco</item>
+        <item>Domonick Eissert</item>
+        <item>Sprinkles</item>
+        <item>Emily Zaddack</item>
+        <item>Ethan Zimmer</item>
+        <item>Jack McWing</item>
+        <item>Jacob D'Amour</item>
+        <item>Jacob Powell</item>
+        <item>Jacob Wise</item>
+        <item>Jerrod Kau</item>
+        <item>Jordan Wells</item>
+        <item>Josh Valin</item>
+        <item>Karl Knueppel</item>
+        <item>Karsten Howland</item>
+        <item>KennyG23</item>
+        <item>Kenny Schroeder</item>
+        <item>Kyle Senebouttarath</item>
+        <item>Mark Menning</item>
+        <item>Matt Ryczek</item>
+        <item>Safety Captain</item>
+        <item>Mir.i.am</item>
+        <item>Nate Brome</item>
+        <item>Nathan Kitzman</item>
+        <item>Nathan Rome</item>
+        <item>Nathaniel Krueger</item>
+        <item>Nicholas Natrop</item>
+        <item>Paul Rinaldi</item>
+        <item>Robert Schiete</item>
+        <item>Sam Blessing</item>
+        <item>Sam Grochowski</item>
+        <item>Samantha Murphy</item>
+        <item>Seth Skarphol</item>
+        <item>Teagan Swift</item>
+        <item>Travis Groshek</item>
+        <item>Trenton Bowser</item>
+        <item>Victor Krieg</item>
+        <item>Victoria Poje</item>
+        <item>Zach Ackermann</item>
+        <item>Your Boi Zach From Team 930</item>
     </string-array>
 
-    <string name="spacing">16dp</string>
+    <string name="scouterListPrompt">Hu u Be?</string>
 
 </resources>
