--- a/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/values/strings.xml
+++ b/Watching_Extremely_Awesome_Robots/WEARs/src/main/res/values/strings.xml
@@ -58,6 +58,14 @@
         <item>Zach Ackermann</item>
         <item>Your Boi Zach From Team 930</item>
     </string-array>
+
+    <string-array name="cubeDestination">
+        <item>Select A Destination</item>
+        <item>Switch</item>
+        <item>Scale</item>
+        <item>Vault</item>
+    </string-array>
+
     <string name="scouterListPrompt">Hu u Be?</string>
     <integer name="adminPassword">478609</integer>
     <integer name="maxMatches">6</integer>
