--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/values/strings.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/values/strings.xml
@@ -12,11 +12,6 @@
         <item>Red 2</item>
         <item>Red 3</item>
     </string-array>
-
-    <string-array name="startPos">
-        <item>Lvl 1</item>
-        <item>Lvl 2</item>
-    </string-array>
     <string name="adminPassword">478609</string>
     <integer name="maxMatches">8</integer>
     <string name="TBA_AUTH_KEY">jNdQjBDqhihOqZw8Al5t83XKRSxBOh3OJDKo3GLDYp5xSzvQJP2oEKOu9gCgM5DQ</string>
@@ -38,4 +33,10 @@
         <item>RedBottom</item>
     </string-array>
 
+
+    <string-array name="startPos">
+        <item>Far</item>
+        <item>Middle</item>
+        <item>Near</item>
+    </string-array>
 </resources>
